Fixed Good for alignment

--- a/src/css/search-card.css
+++ b/src/css/search-card.css
@@ -38,8 +38,14 @@
 .aikb-search-card__title {
   color: var(--clr-text-default, #102040);
   font-size: 20px;
-  font-family: Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue",
-    Arial, sans-serif;
+  font-family:
+    Roboto,
+    system-ui,
+    -apple-system,
+    "Segoe UI",
+    "Helvetica Neue",
+    Arial,
+    sans-serif;
   font-weight: 700;
   line-height: 24px;
   margin: 0;
@@ -50,8 +56,14 @@
 .aikb-search-card__summary {
   color: var(--clr-text-body, #384560);
   font-size: 16px;
-  font-family: Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue",
-    Arial, sans-serif;
+  font-family:
+    Roboto,
+    system-ui,
+    -apple-system,
+    "Segoe UI",
+    "Helvetica Neue",
+    Arial,
+    sans-serif;
   font-weight: 400;
   line-height: 24px;
   margin: 0;
@@ -104,34 +116,54 @@
 .aikb-search-card__useful-for {
   display: flex;
   align-items: center;
-  gap: 4px;
 }
 
 .aikb-search-card__useful-label {
   color: var(--clr-text-default, #102040);
   font-size: 14px;
-  font-family: Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue",
-    Arial, sans-serif;
+  font-family:
+    Roboto,
+    system-ui,
+    -apple-system,
+    "Segoe UI",
+    "Helvetica Neue",
+    Arial,
+    sans-serif;
   font-weight: 700;
   line-height: 20px;
   word-wrap: break-word;
+  align-self: flex-start;
 }
 
 .aikb-search-card__useful-value {
   color: var(--clr-text-default, #102040);
   font-size: 14px;
-  font-family: Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue",
-    Arial, sans-serif;
+  font-family:
+    Roboto,
+    system-ui,
+    -apple-system,
+    "Segoe UI",
+    "Helvetica Neue",
+    Arial,
+    sans-serif;
   font-weight: 400;
   line-height: 20px;
   word-wrap: break-word;
+  max-width: 350px;
+  text-align: right;
 }
 
 .aikb-search-card__date {
   color: var(--clr-text-helper, #606a80);
   font-size: 14px;
-  font-family: Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue",
-    Arial, sans-serif;
+  font-family:
+    Roboto,
+    system-ui,
+    -apple-system,
+    "Segoe UI",
+    "Helvetica Neue",
+    Arial,
+    sans-serif;
   font-weight: 400;
   line-height: 20px;
   word-wrap: break-word;
